--- a/_config.yml
+++ b/_config.yml
@@ -13,18 +13,20 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: 白璞博客
-email: baipubelive@126.com  
+title: Your awesome title
+email: your-email@example.com
 description: > # this means to ignore newlines until "baseurl:"
-  一个代码人的博客
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: 没有这个
-github_username:  baipu
-google_analytics: test
+twitter_username: jekyllrb
+github_username:  jekyll
+
 # Build settings
 markdown: kramdown
-# theme: minima
+theme: minima
 gems:
   - jekyll-feed
 
@@ -39,6 +41,3 @@ gems:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
-#disqus setting 
-disqus:
-  shortname:baipubolg
